crates/strider-analyze/tests/snapshots/aarch64be__memory__array_copy.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "3" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v4" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "18" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v19" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v19" -> "14" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "14" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="arg[2] ← x2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "21" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "23" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "25" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "28" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "36" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "36" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "34" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "41" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "42" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Less\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "44" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "44" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "48" -> "44" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
